# micromarket

./: .gitignore  README.md  countries.json  docker-compose.yml  ngnix.conf  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 272e8b276c03_check_sync.py  b038f4bc3a75_firts_init.py
app/: Dockerfile  alembic.ini  databases.py  main.py  models.py  routers.py  schemas.py
app/alembic/: env.py
app/alembic/versions/: 119e00ae9040_made_title_ununique.py  2d90475839f0_made_title_ununique.py  e3304c8436fe_made_title_ununique.py  f1f2704df3a6_made_title_ununique.py  f438783be903_made_title_ununique.py  f496702324b9_init.py
app/middleware/: ip_address.py
celery_app/: currency.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/: Layout.jsx
frontend/src/pages/: CreateProduct.jsx  Home.jsx  Products.jsx  Register.jsx
tests/: conftest.py  test_app.py  test_user_app.py
tests/ip_tests/: currency.py  main.py
user_app/: Dockerfile  alembic.ini  databases.py  enums.py  main.py  models.py  routers.py  schemas.py
user_app/alembic/: env.py
user_app/alembic/versions/: 216fb7ab35b5_added_password.py  23061cc6f829_card_number_str.py  32d488919627_card_number_str1.py  3fe637b68678_change_card_number_to_biginteger.py  4c028084c7a7_card_number_str.py  636af53cc1c6_change_card_number_to_biginteger.py  6573459e42fa_card_number_str.py  76d8ed58cd01_card_number_str.py  (+11 more)
user_app/auth/: auth.py  dependencies.py
