[project]
name = "narco-empire"
version = "0.1.0"
description = "FastAPI project for Telegram messages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "pydantic>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.50",
    "python-dotenv>=1.0.0",
    "alembic>=1.18.4",
    "faststream[rabbit]>=0.7.1",
    "celery[redis]>=5.6.3",
    "httpx>=0.28.1",
    "geoip2>=5.2.0",
    "starlette>=1.2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
